[gd_scene load_steps=8 format=3 uid="uid://jhaghxdi7w43"]

[ext_resource type="Texture2D" uid="uid://bh3ywrjy2s1xo" path="res://resources/dummy/dummyTV.png" id="1_41maw"]
[ext_resource type="Script" uid="uid://brt80fm76dp72" path="res://scenes/puzzles/TVStand.gd" id="1_faym6"]
[ext_resource type="Texture2D" uid="uid://2nbb2t4toyjx" path="res://resources/dummy/dummyButton.png" id="3_bxltf"]
[ext_resource type="Texture2D" uid="uid://bxqoodx47e4lj" path="res://resources/dummy/dummyFuseBlown.jpg" id="4_2nwi8"]
[ext_resource type="Texture2D" uid="uid://b5kbys8ho6lm4" path="res://resources/dummy/dummyPlug.png" id="4_bxltf"]
[ext_resource type="Texture2D" uid="uid://cjt0agwwvkaki" path="res://resources/dummy/dummyStatic.jpg" id="4_f1m32"]
[ext_resource type="Texture2D" uid="uid://t63d66dm3of8" path="res://resources/dummy/dummySocket.png" id="5_f1m32"]

[node name="TvStand" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_faym6")
hasPocketKnife = true
hasFuse = true

[node name="TvScreen" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 161.0
offset_top = 243.0
offset_right = 968.56757
offset_bottom = 824.0
texture = ExtResource("1_41maw")

[node name="ChannelDial" type="TextureButton" parent="TvScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.386
anchor_top = 0.94500005
anchor_right = 0.386
anchor_bottom = 0.94500005
offset_left = -35.7211
offset_top = -36.045044
offset_right = 36.2789
offset_bottom = 35.954956
texture_normal = ExtResource("3_bxltf")

[node name="Display" type="TextureRect" parent="TvScreen"]
z_index = -1
layout_mode = 0
offset_left = 38.0
offset_top = 19.0
offset_right = 648.0
offset_bottom = 488.0
texture = ExtResource("4_f1m32")
expand_mode = 1

[node name="Plug" type="TextureButton" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.70100003
anchor_top = 0.41300002
anchor_right = 0.70100003
anchor_bottom = 0.41300002
offset_left = -31.920044
offset_top = 15.959991
offset_right = 451.07996
offset_bottom = 671.55554
texture_normal = ExtResource("4_bxltf")

[node name="FuseButton" type="TextureButton" parent="Plug"]
layout_mode = 0
offset_left = 238.0
offset_top = 286.0
offset_right = 388.0
offset_bottom = 324.0
rotation = 1.5707964
texture_normal = ExtResource("4_2nwi8")

[node name="Socket" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1273.0
offset_top = 23.0
offset_right = 1653.0
offset_bottom = 403.0
texture = ExtResource("5_f1m32")
expand_mode = 1

[connection signal="button_down" from="TvScreen/ChannelDial" to="." method="GrabDial"]
[connection signal="button_down" from="Plug" to="." method="GrabPlug"]
[connection signal="button_up" from="Plug/FuseButton" to="." method="ReplaceFuse"]
